[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/LevelRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/Fonts/HoverMenu_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Menus/MenuManager.gd" type="Script" id=3]
[ext_resource path="res://Art/UI/UI_Pixel.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/Menu/Credits V1.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/Menu/GameOverPopUp.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Menus/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://Art/Fonts/Reduction.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/Menus/MenuLabels.gd" type="Script" id=9]
[ext_resource path="res://Art/UI/Menu/UpgradePopUp.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Main.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/MenuScenes/CreditsScene.tscn" type="PackedScene" id=12]
[ext_resource path="res://Music-Sounds/SFX/menu/startgame.mp3" type="AudioStream" id=13]
[ext_resource path="res://Art/UI/Menu/Options V1.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MenuManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -506, 106 )
script = ExtResource( 3 )
levelRoomScene = ExtResource( 1 )
mainMenuScene = ExtResource( 11 )
CreditsScene = ExtResource( 12 )

[node name="MainMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 7 )
gameScene = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 200
custom_constants/margin_top = 250
custom_constants/margin_left = 200
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
margin_left = 200.0
margin_top = 250.0
margin_right = 824.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_right = 624.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 624.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Play Button" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 524.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Play Label" type="Label" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Play Button"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 1
size_flags_vertical = 5
custom_colors/font_color = Color( 0.611765, 0.380392, 0.227451, 1 )
custom_colors/font_color_shadow = Color( 0.345098, 0.113725, 0.0901961, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 2 )
text = "Play"
align = 1
valign = 1
script = ExtResource( 9 )
hoveredButtonP = NodePath(".")
nonHoveredButtonP = NodePath("../../../MarginContainer2/Options Button/Options Label")

[node name="MarginContainer2" type="MarginContainer" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 624.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Options Button" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 100.0
margin_right = 524.0
margin_bottom = 70.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon_align = 1

[node name="Options Label" type="Label" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Options Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
hoveredButtonP = NodePath("../../../MarginContainer/Play Button/Play Label")
nonHoveredButtonP = NodePath(".")

[node name="MarginContainer3" type="MarginContainer" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 624.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Credits Button" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 100.0
margin_right = 524.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon_align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Credits Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Credits"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
hoveredButtonP = NodePath("../../../MarginContainer/Play Button/Play Label")
nonHoveredButtonP = NodePath("../../../MarginContainer2/Options Button/Options Label")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 13 )

[node name="UpgradeMenu Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UpgradeMenu Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="UpgradeMenu Control/AspectRatioContainer"]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeMenu Control/AspectRatioContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 214.0
margin_bottom = -214.0
alignment = 1

[node name="Button" type="Button" parent="UpgradeMenu Control/AspectRatioContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -88.0
margin_right = 140.0
margin_bottom = -27.0
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="GameOverMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="GameOverMenu/AspectRatioContainer"]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
texture = ExtResource( 6 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="GameOverMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 200.0
margin_top = 20.0
margin_right = -200.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="TryAain Button" type="Button" parent="GameOverMenu/MarginContainer2"]
margin_left = 100.0
margin_right = 524.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon_align = 1

[node name="TryAgain Label" type="Label" parent="GameOverMenu/MarginContainer2/TryAain Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Try Again?"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
hoveredButtonP = NodePath("../../../../MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Play Button/Play Label")
nonHoveredButtonP = NodePath(".")

[node name="CreditsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CreditsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsMenu/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = -117.0
margin_right = 251.0
margin_bottom = 147.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]
susheelreddy87 : Artist

kimiguraan : musician

callum : programmer

Bobojo : Programmer
[/center]"
text = "
susheelreddy87 : Artist

kimiguraan : musician

callum : programmer

Bobojo : Programmer
"

[node name="MarginContainer2" type="MarginContainer" parent="CreditsMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 261.0
margin_top = 177.0
margin_right = -261.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Back Button" type="Button" parent="CreditsMenu/MarginContainer2"]
margin_left = 100.0
margin_right = 402.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon_align = 1

[node name="Back Label" type="Label" parent="CreditsMenu/MarginContainer2/Back Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
hoveredButtonP = NodePath("../../../../MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Play Button/Play Label")
nonHoveredButtonP = NodePath(".")

[node name="EndingMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="EndingMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="EndingMenu/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 250.0
margin_right = -300.0
margin_bottom = -190.0
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
size_flags_vertical = 5
custom_colors/default_color = Color( 0.639216, 0.4, 0.235294, 1 )
custom_colors/font_color_shadow = Color( 0.345098, 0.113725, 0.0901961, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]
THank You for Playing!
[/center]"
text = "
THank You for Playing!
"
scroll_active = false
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer2" type="MarginContainer" parent="EndingMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 261.0
margin_top = 177.0
margin_right = -261.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Back Button" type="Button" parent="EndingMenu/MarginContainer2"]
margin_left = 100.0
margin_right = 402.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon_align = 1

[node name="Back Label" type="Label" parent="EndingMenu/MarginContainer2/Back Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
hoveredButtonP = NodePath("../../../../MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Play Button/Play Label")
nonHoveredButtonP = NodePath(".")

[node name="Options Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect2" type="TextureRect" parent="Options Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Options Control/TextureRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 200.0
margin_right = -300.0
margin_bottom = -150.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Options Control/TextureRect2/MarginContainer"]
margin_right = 424.0
margin_bottom = 250.0

[node name="Settings Label" type="Label" parent="Options Control/TextureRect2/MarginContainer/VBoxContainer2"]
margin_right = 424.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 7 )
text = "Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Options Control/TextureRect2/MarginContainer/VBoxContainer2"]
margin_top = 44.0
margin_right = 424.0
margin_bottom = 75.0
custom_constants/separation = 38
alignment = 1

[node name="Music Label" type="Label" parent="Options Control/TextureRect2/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 424.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Music"

[node name="Music Slider" type="HSlider" parent="Options Control/TextureRect2/MarginContainer/VBoxContainer2/VBoxContainer/Music Label"]
margin_right = 424.0
margin_bottom = 70.0

[node name="Music Label2" type="Label" parent="Options Control/TextureRect2/MarginContainer/VBoxContainer2/VBoxContainer"]
visible = false
margin_top = 69.0
margin_right = 424.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Sounds"

[node name="Sound HSlider" type="HSlider" parent="Options Control/TextureRect2/MarginContainer/VBoxContainer2/VBoxContainer/Music Label2"]
margin_right = 424.0
margin_bottom = 70.0

[node name="Back Button" type="Button" parent="Options Control/TextureRect2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -151.0
margin_top = -122.0
margin_right = 151.0
margin_bottom = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon_align = 1

[node name="Back Label" type="Label" parent="Options Control/TextureRect2/Back Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 1
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
hoveredButtonP = NodePath("../../../../MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Play Button/Play Label")
nonHoveredButtonP = NodePath(".")

[connection signal="button_down" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Play Button" to="." method="_on_TryAain_Button_button_down"]
[connection signal="button_down" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Options Button" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Credits Button" to="." method="_on_Credits_Button_button_down"]
[connection signal="button_down" from="GameOverMenu/MarginContainer2/TryAain Button" to="." method="_on_TryAain_Button_button_down"]
[connection signal="button_down" from="CreditsMenu/MarginContainer2/Back Button" to="." method="_on_Back_Button_to_menu_button_down"]
[connection signal="button_down" from="EndingMenu/MarginContainer2/Back Button" to="." method="_on_Back_Button_to_menu_button_down"]
[connection signal="value_changed" from="Options Control/TextureRect2/MarginContainer/VBoxContainer2/VBoxContainer/Music Label/Music Slider" to="." method="_on_Music_Slider_value_changed"]
[connection signal="button_down" from="Options Control/TextureRect2/Back Button" to="." method="_on_Options_Back_button_down"]
